--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Screen</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
-</head>
-<body>
+{% extends "template.html" %}
+{% block content %}
+
     <div class="container">
         <div class="login-box">
             <div class="center-container">
@@ -18,18 +12,18 @@
                   <img src="{{ url_for('static', filename='img/moedas1.png') }}" alt="Moedas1" class="floating">
                   <img src="{{ url_for('static', filename='img/moedas2.png') }}" alt="Moedas2" class="floating">
                 </div>
-              </div>
+            </div>
             <form class="login-form">
-                <h2>Welcome!</h2>
-                <p>Sign in to your Account</p>
-                <input type="email" placeholder="Email Address">
-                <input type="password" placeholder="Password">
-                <a href="#">Forgot Password?</a>
-                <button type="submit">Sign In</button>
-                <button type="button">Sign Up</button>
-            
+                {{ form.hidden_tag() }}
+                <h2>PoupApp!</h2>
+                <p>Faça login em sua conta</p>
+                {{ form.login(placeholder="Digite o seu e-mail") }}
+                {{ form.password(placeholder="Digite sua senha") }}
+                <a href="#">Esqueceu a senha?</a>
+                <button type="submit">{{ form.entrar.label.text }}</button>
+                <button type="button">{{ form.cadastrar.label.text }}</button>
             </form>
         </div>
     </div>
-</body>
-</html>
+
+{% endblock %}
