--- a/templates/template.html
+++ b/templates/template.html
@@ -6,11 +6,10 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap-5.3.3/css/bootstrap.min.css') }}">
     <script type="text/javascript" src="{{ url_for('static', filename='bootstrap-5.3.3/js/bootstrap.bundle.min.js') }}"></script>
     <script src="{{ url_for('static', filename = 'js/jquery.min.js') }}"></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
     <title>PoupApp</title>
 </head>
 <body>
-    <div class="container">
     {% block content%} {% endblock %}
-    </div>
 </body>
 </html>
