--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -3,7 +3,7 @@ body, html {
     padding: 0;
     height: 100%;
     font-family: 'Arial', sans-serif;
-    background: linear-gradient(135deg, #a6ddb2 0%, #7db68a 100%);
+    background: linear-gradient(145deg, #a6ddb2 0%, #0f572e 100%);
 }
 
 .container {
@@ -18,7 +18,7 @@ body, html {
 
 
 .login-box {
-    background: #fff;
+    background: #F5F3EF;
     padding: 40px;
     border-radius: 10px;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
@@ -34,24 +34,27 @@ body, html {
 }
 
 .login-form h2 {
+    font-weight: bold;
     margin: 0;
-    color: #333;
+    color: #484139;
 }
 
 .login-form p {
-    color: #666;
+    margin-top: 5%;
+    color: #484139;
 }
 
 .login-form input {
     width: 90%;
     padding: 10px;
     margin: 10px 0;
-    border: 1px solid #ddd;
+    border: 1px solid #666666;
     border-radius: 5px;
+    background-color: #F5F3EF;
 }
 
 .login-form a {
-    color: #7db68a;
+    color: #207344;
     text-decoration: none;
     display: block;
     margin: 10px 0;
@@ -63,7 +66,7 @@ body, html {
     margin: 10px 0;
     border: none;
     border-radius: 5px;
-    background: #7db68a;
+    background: #207344;
     color: #fff;
     cursor: pointer;
 }
@@ -96,20 +99,36 @@ body, html {
 }
 
 .ilustra {
-
-  width: 90%;
+  width: 100%;
   max-width: 512px;
   height: auto;
-  margin-right: 20%;
+  margin-right: auto;
 }
 
 .ilustra img {
+  margin-top: 25%;
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
   height: auto;
   max-width: 100%;
+}
+
+@media (max-width: 600px) {
+  .ilustra img{
+      opacity: 0%;
+  }
+  .login-form{
+      position: absolute;
+      padding: 10px;
+      margin: 5px 0;
+      border: 1px solid #ddd;
+      border-radius: 5px;
+      background: #fff;
+      color: #333;
+      cursor: pointer;
+      width: auto;
+      height: auto;
+      margin-left: 5%;
+  }
 }
 
 .floating {
