--- a/templates/index.html
+++ b/templates/index.html
@@ -5,19 +5,14 @@
         <div class="login-box">
             <div class="center-container">
                 <div class="ilustra">
-                  <img src="{{ url_for('static', filename='img/portal.png') }}" alt="Portal" class="portal">
-                  <img src="{{ url_for('static', filename='img/efeitos.png') }}" alt="Efeitos" class="floating">
-                  <img src="{{ url_for('static', filename='img/cofrinho.png') }}" alt="Cofrinho" class="floating">
-                  <img src="{{ url_for('static', filename='img/itens.png') }}" alt="Itens" class="floating-itens">
-                  <img src="{{ url_for('static', filename='img/moedas1.png') }}" alt="Moedas1" class="floating">
-                  <img src="{{ url_for('static', filename='img/moedas2.png') }}" alt="Moedas2" class="floating">
+                  <img src="{{ url_for('static', filename='img/security.svg') }}" alt="Efeitos" class="floating">
                 </div>
             </div>
             <div class="login-form">
                 <form>
                     {{ form.hidden_tag() }}
-                    <h2>PoupApp!</h2>
-                    <p>Faça login em sua conta</p>
+                    <h2>PoupApp</h2>
+                    <p>Faça login em sua conta.</p>
                     {{ form.login(placeholder="Digite seu login") }}
                     {{ form.password(placeholder="Digite sua senha") }}
                     <a href="">Esqueceu a senha?</a>
