Cadastro e Login implementados, tela do menu principal

--- a/templates/cadastrar.html
+++ b/templates/cadastrar.html
@@ -36,7 +36,7 @@
             </div>
         </div>
     </form>
-    <a class="btn btn-danger" href="{{ url_for('index') }}" role="button">Voltar</a>
+    <a class="btn btn-danger" href="{{ url_for('login') }}" role="button">Voltar</a>
 </div>
 
 {%endblock%}
