--- a/templates/cadastrar.html
+++ b/templates/cadastrar.html
@@ -39,4 +39,39 @@
     <a class="btn btn-danger" href="{{ url_for('login') }}" role="button">Voltar</a>
 </div>
 
+{% if error | length > 0 %}
+        <p id="error_text" hidden>{{error}}</p>
+        <!-- Modal -->
+        <div id="myModal" class="modal fade" role="dialog">
+            <div class="modal-dialog modal-dialog-centered">
+                <!-- Modal content-->
+                <div class="modal-content" style="color:black;">
+                    <div class="modal-header">
+                        <h5 class="modal-title text-danger"><b>Erro</b></h5>
+                    </div>
+                    <div class="modal-body" id="modalBody">
+                        <p id="modal_text">modal_text</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn-info" data-bs-dismiss="modal" id="cancelButton">Fechar</button>
+                </div>
+            </div>
+
+            </div>
+        </div>
+        <script>
+            var modalText = document.getElementById("modalBody");
+            var errorText = document.getElementById("error_text").textContent;
+            modalText.innerHTML = errorText;
+            var myModal = new bootstrap.Modal(document.getElementById('myModal'), {
+                backdrop: 'static'
+            });
+            myModal.show();
+
+            document.getElementById('cancelButton').addEventListener("click", function () {
+                myModal.hide();
+            });
+        </script>
+    {% endif %}
+
 {%endblock%}
