--- a/templates/template.html
+++ b/templates/template.html
@@ -7,6 +7,7 @@
     <script type="text/javascript" src="{{ url_for('static', filename='bootstrap-5.3.3/js/bootstrap.bundle.min.js') }}"></script>
     <script src="{{ url_for('static', filename = 'js/jquery.min.js') }}"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <title>PoupApp</title>
 </head>
 <body>
