--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,9 +1,19 @@
-body, html {
+* {
   margin: 0;
   padding: 0;
-  height: 100%;
+  box-sizing: border-box;
   font-family: 'Roboto', sans-serif;
 }
+
+body{
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(145deg, #a6ddb2 0%, #0f572e 100%);
+}
+
 
 .container {
   display: flex;
@@ -12,7 +22,6 @@ body, html {
   height: 100%;
   width: 100%;
   overflow: hidden;
-
 }
 .background{
 position: absolute;
@@ -65,6 +74,11 @@ min-height: 100%;
   background-color: #F5F3EF;
 }
 
+.login-form input:focus-visible{
+  outline: 1px solid #18c764;
+}
+
+
 .login-form a {
   color: #207344;
   text-decoration: none;
@@ -73,7 +87,7 @@ min-height: 100%;
 }
 
 .login-form button {
-  width: 100%;
+  width: 90%;
   padding: 10px;
   margin: 10px 0;
   border: none;
@@ -104,6 +118,13 @@ min-height: 100%;
   margin: 5px 0;
   border-radius: 5px;
   color: #333;
+}
+
+.button-register {
+  width: 100%;
+  margin: none;
+  border: none;
+  border-radius: 5px;
   cursor: pointer;
 }
 .center-container {
@@ -129,11 +150,11 @@ max-width: 100%;
 min-width: 400px;
 }
 
-@media (max-width: 600px) {
-.ilustra img{
-    opacity: 0%;
-}
-.login-form{
+@media (max-width: 991px) {
+  .ilustra img{
+  display: none;
+  }
+  .login-form{
     position: absolute;
     padding: 10px;
     margin: 5px 0;
@@ -141,12 +162,14 @@ min-width: 400px;
     border-radius: 5px;
     background: #fff;
     color: #333;
-    cursor: pointer;
     width: auto;
     height: auto;
     min-width: 460px;
     margin-left: 5%;
-}
+  }
+  .button-register {
+    width: 94%;
+  }
 }
 
 .floating {
@@ -322,4 +345,32 @@ animation: float-itens 5s ease-in-out infinite;
   font-weight: bold;
   margin: 0;
   color: #484139;
+}
+
+@media (max-width: 1360px){
+  .register-img {
+    display: none;
+  }
+  .register-form{
+    width: 100%;
+    padding: 10%;
+  }
+
+  .input-box{
+    margin: 5px;
+  }
+}
+@media (max-width: 600px) {
+  .register-img {
+    display: none;
+  }
+  .register-form{
+    position: absolute;
+    width: auto;
+    height: auto;
+  }
+  .container-register{
+    position: absolute;
+    min-width: 400px;
+  }
 }
