--- a/templates/cadastrar.html
+++ b/templates/cadastrar.html
@@ -2,9 +2,10 @@
 {% block content %}
 
 <!-- TODO: estilizar e remover estilos implicitos -->
+
 <div class="container-register">
     <div class="register-img">
-        <img src="{{ url_for('static', filename='img/cadastro.svg') }}" alt="image register" class="floating">
+        <img src="{{ url_for('static', filename='img/register.svg') }}" alt="image register" class="floating">
     </div>
     <div class="register-form">
         <form action="{{ url_for('cadastrar') }}" method="post">
