--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -50,7 +50,7 @@
       </div>
       <div class="bottom">
         <div class="schedule">
-          <span>CONFIGURAÇÕES</span>
+          <a href="">OBTER VERSÃO PRO</a>
         </div>
         <div class="profile">
           <img src="{{ url_for('static', filename='img/perfil.png') }}" alt="Profile Picture">
@@ -110,24 +110,25 @@
         </div>
         <div class="articleitem2">
           <div class="item2cont">
-            <div class="velocimetro" id="velocimetro"></div> <!-- Adicionado -->
+            <div class="velocimetro" id="velocimetro"></div>
             <div class="w3-container">
               <p>VAL3</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-container w3-blue w3-round-xlarge" style="width:28%">28%</div>
+                <div class="w3-container w3-round-xlarge" style="width:28%; background-color: #00c39a; color:white;">28%</div>
               </div>
               <p>PETR4</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-container w3-blue w3-round-xlarge" style="width:30%">30%</div>
+                <div class="w3-container w3-round-xlarge" style="width:30%; background-color: #00c39a; color:white;">30%</div>
               </div>
               <p>BBAS3</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-container w3-blue w3-round-xlarge" style="width:33%">33%</div>
+                <div class="w3-container w3-round-xlarge" style="width:33%; background-color: #00c39a; color:white;">33%</div>
               </div>
               <p>PRIO3</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-container w3-blue w3-round-xlarge" style="width:37%">37%</div>
+                <div class="w3-container w3-round-xlarge" style="width:37%; background-color: #00c39a; color:white;">37%</div>
               </div>
+            </div>
             </div>
           </div>
           <div>
@@ -137,7 +138,7 @@
       </div>
     </div>
   </div>
-
   <script src="{{ url_for('static', filename='js/home.js') }}"></script>
+
 </body>
 </html>
