--- a/templates/template.html
+++ b/templates/template.html
@@ -8,6 +8,7 @@
     <script src="{{ url_for('static', filename = 'js/jquery.min.js') }}"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='img/logo.png') }}">
     <title>PoupApp</title>
 </head>
 <body>
