Adicionado tabela de gastos, adicionado pagina de inserir gastos e metodos de inserção de gastos

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -31,6 +31,11 @@
               <li><a href="#">MESES ANTERIORES</a></li>
             </ul>
           </li>
+          <li class="listaMenu"><a href="#"><span>GASTOS</span></a>
+            <ul class="submenu">
+              <li><a href="{{ url_for('cadgastos') }}">CADASTRAR</a></li>
+            </ul>
+          </li>
           <li class="listaMenu"><a href="#"><span>RECEITAS</span></a>
             <ul class="submenu">
               <li><a href="#">GANHOS</a></li>
